MsvcToolchain: Fix wchar_t warnings for C files

For pure C compilation we do not need _WCHAR_T_DEFINED
flag.

Task-number: QTCREATORBUG-17235
Change-Id: I05fb04622056a19581cf45ac9a707864cd1cdf8f
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>